@@ -1,0 +1,14 @@
+<h1 class="title">Getting Help with Ubuntu</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li><!-- The string "Help and Support" should be exactly as it appears in the System menu. -->If you need help, try <em>Help and Support</em> from the System menu, or the <em>Help</em> menu in most applications.</li>
+	<li><!-- The url "ubuntu.com/support" should not be translated -->In addition to our extensive written help, the Ubuntu community provides free technical support in person and over the Internet. There is also commercial support available through Canonical, its partners and approved companies. Learn more at <a href="http://www.ubuntu.com/support">ubuntu.com/support</a>.</li>
+	<li><!-- The url "ubuntu.com/community" should not be translated -->Let us know about your Ubuntu experience at <a href="http://ubuntu.com/community">ubuntu.com/community</a>!</li>
+</ul>
+<p class="special">The installation will finish soon. We hope you enjoy Ubuntu.</p></div>
+
+</div>
+
+<img class="icon" src="icons/help.png" alt="" />
