@@ -1,0 +1,13 @@
+<h1 class="title">Control your digital life with Evolution</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li><!-- "Evolution Mail" should be the exact name of the Evolution launcher inside the Internet menu or the indicator applet. --><em>Evolution Mail</em> is the fully-featured email and calendar software that comes with Ubuntu. It connects to most email services, for example Gmail and Yahoo.</li>
+	<li>Advanced junk filtering and search tools make managing your mail a breeze.</li>
+	<li>Add your favorite Web calendars to see upcoming games or movie releases. To see your daily schedule, just click the clock at the top of your screen.</li>
+</ul></div>
+
+</div>
+
+<img class="icon" src="icons/evolution.png" alt="" />
