@@ -1,0 +1,14 @@
+<h1 class="title">Organize, enjoy, and share your photos</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li><!-- "F-Spot Photo Manager" should be the exact name that is used for F-Spot in the Applications menu -->With <em>F-Spot Photo Manager</em>, it is really easy to share, touch-up and organize digital photos.</li>
+	<li><!-- Instead of directly translating the word "tags," please use the exact name of the feature in F-Spot for your locale. (Tags are used to label photos). -->Use tags to describe your photos so that they are easy to find later on.</li>
+	<li>Use the Export option to write your photos to CDs, email them to friends or share them online.</li>
+	<li><!-- Graphics Applications refers to the Graphics submenu, and then the main Applications menu. -->To get started, choose F-Spot from the Graphics Applications menu or attach a digital camera and follow the prompts.</li>
+</ul></div>
+
+</div>
+
+<img class="icon" src="icons/fspot.png" alt="" />
