@@ -1,0 +1,13 @@
+<h1 class="title">Office tools at your fingertips</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li><!-- "OpenOffice.org" does not refer to a particular menu item, but it a name shared in common between all of the OpenOffice components in the Applications menu. --><em>OpenOffice.org</em> is a powerful office software suite that is very easy to learn.</li>
+	<li>It is useful to create letters, presentations and spreadsheets, as well as diagrams and databases.</li>
+	<li><em>OpenOffice.org</em> works with documents from other popular office applications including WordPerfect and Microsoft Office. It uses the international standard OpenDocument format by default.</li>
+</ul></div>
+
+</div>
+
+<img class="icon" src="icons/openoffice.png" alt="" />
