@@ -1,0 +1,13 @@
+<h1 class="title">Music and movies in Ubuntu</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li>Ubuntu is ready to play videos and music from the web, from CDs and DVDs.</li>
+	<li><!-- "Rhythmbox Music Player" refers to the exact name for Rhythmbox in the Applications menu. "Podcasts" should be as described in the Rhythmbox user interface, not necessarily the coloquial word. --><em>Rhythmbox Music Player</em> lets you organize your music and listen to Internet radio. It also keeps track of podcasts, to download new episodes of a show automatically.</li>
+	<li>Plug in an MP3 player to start synchronizing your music collection, or insert a CD to copy its music to your computer.</li>
+</ul></div>
+
+</div>
+
+<img class="icon" src="icons/rhythmbox.png" alt="" />
