@@ -1,0 +1,13 @@
+<h1 class="title">Ubuntu speaks fluently</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li>Ubuntu is available in many different languages.</li>
+	<li>Simply select your language in Language Support Administration</li>
+	<li>Ubuntu's translations are contributed by our generous users. Feel free to help out at <a href="http://translations.launchpad.net/ubuntu">launchpad.net</a>.</li>
+</ul></div>
+
+</div>
+
+<img class="icon" src="icons/locale.png" alt="" />
