@@ -1,0 +1,14 @@
+<h1 class="title">Store, sync and share with Ubuntu One</h1>
+
+<div class="main">
+
+<div class="content"><ul>
+	<li><em>Ubuntu One</em> is your personal cloud, providing 2 GB of essential storage (and more if you need it).</li>
+	<li>Use it to back up, store and sync your files, as well as share them with other Ubuntu One users.</li>
+	<li>Your Tomboy notes and Evolution contacts are synced automatically across all of your computers.</li>
+	<li>Integration with your Ubuntu desktop makes sharing files easy.</li>
+</ul></div>
+
+</div>
+
+<img class="icon" src="icons/ubuntuone.png" alt="" />
